# blockchain

./: .gitignore  Cargo.toml  README.md  ideas.md
bitcoin/: analytics.ipynb
ethereum/Ballot/: combined.json  package.json
ethereum/MetaCoin/: truffle-config.js
ethereum/Node/: run.bat
ethereum/Voter/: abi.json  contract_interact.js  deploy.js  package.json
ethereum/crowfund/: truffle-config.js
ethereum/crowfund/contracts/: CrowdFundingWithDeadline.sol  TestCrowdFundingWithDeadline.sol  Utils.sol
ethereum/crowfund/test/: crowd_funding_test.js
ethereum/erc20-brownie/contracts/: ChainTrust.sol  TokenERC20.sol
ethereum/erc20-brownie/scripts/: 1_deploy_token.py  (+1 more)
ethereum/flashloan/: flashloan.sol
ethereum/hardhat_1/: package.json
ethereum/petshop/: .gitignore  logs.txt  old.txt
ethereum/truffle-demo/: truffle-config.js
lnw/: .gitignore  Untitled.ipynb  build.bat  graph.txt  lncli_zap.bat  lnw.py  monitor.py  run_btcd.bat  run_lnd.bat  stateservice_pb2.py  stateservice_pb2_grpc.py  ui.py  ui_channel.py  ui_connect.py  ui_create.py  ui_invoice.py  ui_lnw.py  ui_pay.py  ui_unlock.py  util.py  wallet.py  walletunlocker_pb2.py  worker.py  zap.txt  zap_graph.dot  zap_graph.py
lnw/ui/: channel.ui  connect.ui  create.ui  invoice.ui  lnw.ui  pay.ui  unlock.ui
notebook/: bip39.ipynb  cardano_metadata.ipynb  proof_of_reserves.ipynb  proof_of_reserves_users.json
src/: csv.rs  db.rs  hash.rs  lib.rs  main.rs  model.rs  opcodes.rs  parser.rs  parsertest.rs  transaction.rs
src/analytic/: mining.rs  mod.rs  network.rs  opreturn.rs  script.rs  utxoset.rs
(+10 files in other folders)
