[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "btcparse"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
hex = "0.4.3"
bs58 = "0.5.1"
ripemd = "0.1.3"
sha2 = "0.10.9"
bech32 = "0.11.0"
tempfile = "3.20.0"
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
